--- a/coffee-house/src/scss/base/_typography.scss
+++ b/coffee-house/src/scss/base/_typography.scss
@@ -1,3 +1,34 @@
 body {
   font-family: "Inter", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.heading-1 {
+  font-size: 7.2rem;
+  font-weight: 600;
+  line-height: 105%;
+}
+
+.heading-2 {
+  font-size: 6rem;
+  font-weight: 600;
+  line-height: 125%;
+}
+
+.heading-3 {
+  font-size: 2.4rem;
+  font-weight: 600;
+  line-height: 105%;
+}
+
+.text-accent {
+  font-style: italic;
+  color: var(--color-text-accent);
+}
+
+.text-caption {
+  font-size: 1rem;
+  font-weight: 600;
 }
