--- a/coffee-house/src/scss/base/_typography.scss
+++ b/coffee-house/src/scss/base/_typography.scss
@@ -3,6 +3,8 @@ body {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 150%;
+
+  color: var(--color-text-dark);
 }
 
 .heading-1 {
@@ -20,7 +22,7 @@ body {
 .heading-3 {
   font-size: 2.4rem;
   font-weight: 600;
-  line-height: 105%;
+  line-height: 125%;
 }
 
 .text-accent {
