--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -1,3 +1,8 @@
+.main {
+  display: grid;
+  gap: 10rem;
+}
+
 .hero {
   background-image: url("/src/imgs/hero.jpeg");
   background-size: cover;
@@ -19,5 +24,12 @@
 
   &__text {
     color: var(--color-text-light);
+  }
+}
+
+.favorites {
+  &__title {
+    text-align: center;
+    margin-bottom: 4rem;
   }
 }
