--- a/coffee-house/src/scss/main.scss
+++ b/coffee-house/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "base/typography";
 @import "components/buttons";
 @import "components/carousel";
+@import "components/gallery";
 @import "components/modal";
 @import "layout/header";
 @import "layout/navigation";
