--- a/coffee-house/src/scss/components/_buttons.scss
+++ b/coffee-house/src/scss/components/_buttons.scss
@@ -70,3 +70,47 @@
     }
   }
 }
+
+.btn-appstore {
+  &,
+  &:link,
+  &:visited {
+    @extend %btn;
+    padding: 0.6rem 2rem;
+
+    display: grid;
+    grid-template-columns: 3.6rem 1fr;
+    column-gap: 0.8rem;
+    row-gap: 0;
+
+    border: 1px solid var(--color-border-dark);
+
+    svg {
+      color: var(--color-text-dark);
+    }
+  }
+
+  &:hover,
+  &:active {
+    background-color: var(--color-bg-container);
+    color: var(--color-text-light);
+
+    svg {
+      color: var(--color-text-light);
+    }
+  }
+
+  &__icon {
+    grid-row: 1/3;
+    width: 3.6rem;
+    height: 3.6rem;
+  }
+
+  &__caption {
+    grid-column: 2/3;
+  }
+
+  &__title {
+    grid-column: 2/3;
+  }
+}
