--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -39,4 +39,25 @@
   gap: 4rem;
 }
 
+.mobile-app {
+  display: flex;
+  gap: 10rem;
 
+  &__info {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 4rem;
+  }
+
+  &__links {
+    display: flex;
+    gap: 2rem;
+  }
+
+  &__img-box {
+    flex: 1;
+  }
+}
