fix: fix paddings

--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -4,6 +4,10 @@
   margin-bottom: 10rem;
 }
 
+.hero-section {
+  margin-inline: 4rem;
+}
+
 .hero {
   background-image: url("/src/imgs/hero.jpeg");
   background-size: cover;
