--- a/coffee-house/src/scss/layout/_footer.scss
+++ b/coffee-house/src/scss/layout/_footer.scss
@@ -1,3 +1,7 @@
+.footer-section {
+  margin-inline: 4rem;
+}
+
 .footer {
   display: flex;
   align-items: center;
@@ -5,8 +9,9 @@
 
   margin-bottom: 4rem;
 
-  border-radius: 4rem;
   padding: 10rem;
+  border-radius: 4rem;
+
   background-color: var(--color-bg-container);
 
   &__offer {
