--- a/coffee-house/src/scss/components/_gallery.scss
+++ b/coffee-house/src/scss/components/_gallery.scss
@@ -27,6 +27,13 @@
       height: 100%;
       object-fit: cover;
       scale: 1.1;
+      transition: all 0.3s;
+    }
+
+    &:hover {
+      img {
+        scale: 1;
+      }
     }
   }
 }
