feat: create menu page

--- a/coffee-house/src/scss/main.scss
+++ b/coffee-house/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/gallery";
+@import "components/card";
 @import "components/modal";
 @import "layout/header";
 @import "layout/navigation";
