--- a/coffee-house/src/scss/components/_buttons.scss
+++ b/coffee-house/src/scss/components/_buttons.scss
@@ -133,3 +133,38 @@
     grid-column: 2/3;
   }
 }
+
+.btn-tab {
+  @extend %btn;
+  width: auto;
+  padding: 0.8rem;
+  padding-right: 1.6rem;
+
+  border: 1px solid var(--color-border-light);
+  background-color: transparent;
+
+  img {
+    width: 3rem;
+    height: 3rem;
+    padding: 0.5rem;
+    border-radius: 100rem;
+
+    background-color: var(--color-border-light);
+  }
+
+  &:hover,
+  &:active,
+  &--active {
+    color: var(--color-text-light);
+    border-color: var(--color-border-dark);
+    background-color: var(--color-border-dark);
+
+    img {
+      background-color: var(--color-bg-body);
+    }
+  }
+
+  &--active {
+    cursor: not-allowed;
+  }
+}
