fix: fix hero and footer margin

--- a/coffee-house/src/scss/layout/_footer.scss
+++ b/coffee-house/src/scss/layout/_footer.scss
@@ -1,11 +1,8 @@
-.footer-section {
-  margin-inline: 4rem;
-}
-
 .footer {
   display: flex;
   align-items: center;
   gap: 10rem;
+  max-width: 136rem;
 
   margin-bottom: 4rem;
 
