--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -4,16 +4,13 @@
   margin-bottom: 10rem;
 }
 
-.hero-section {
-  margin-inline: 4rem;
-}
-
 .hero {
   background-image: url("/src/imgs/hero.jpeg");
   background-size: cover;
   background-position: 0%;
   border-radius: 4rem;
   padding: 10rem;
+  max-width: 136rem;
 
   &__info {
     width: 53rem;
