fix: remove interactivity styles from schedule element

--- a/coffee-house/src/scss/layout/_footer.scss
+++ b/coffee-house/src/scss/layout/_footer.scss
@@ -62,6 +62,9 @@
     &:active {
       border-color: var(--color-border-light);
     }
+    &--schedule {
+      pointer-events: none;
+    }
 
     svg {
       width: 2rem;
