--- a/coffee-house/src/scss/layout/_navigation.scss
+++ b/coffee-house/src/scss/layout/_navigation.scss
@@ -14,6 +14,7 @@
   &__link {
     &:link,
     &:visited {
+      position: relative;
       display: flex;
       align-items: start;
       gap: 0.8rem;
@@ -25,14 +26,24 @@
       text-decoration: none;
       color: var(--color-text-dark);
       transition: all 0.3s;
-      border-bottom: 0.2rem solid transparent;
     }
 
-    &:hover,
-    &:active,
-    &--active:link,
-    &--active:visited {
-      border-color: var(--color-text-dark);
+    &::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border-bottom: 0.2rem solid var(--color-border-dark);
+      transition: all 0.3s;
+      transform: scaleX(0);
+    }
+
+    &--active:link:after,
+    &--active:visited:after,
+    &:hover:after,
+    &:active:after {
+      transform: scaleX(1);
     }
 
     &--active:link,
