feat: style hero for tablets

--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -12,6 +12,11 @@
   padding: 10rem;
   max-width: 136rem;
 
+  @include respond(tablet) {
+    background-position: 50%;
+    padding-inline: 6rem;
+  }
+
   &__info {
     width: 53rem;
 
