--- a/coffee-house/src/scss/base/_variables.scss
+++ b/coffee-house/src/scss/base/_variables.scss
@@ -9,4 +9,10 @@
 
   --color-border-light: #c1b6ad;
   --color-border-dark: #665f55;
+
+  --padding-inline: 4rem;
+
+  @include respond(phone) {
+    --padding-inline: 1.6rem;
+  }
 }
