--- a/coffee-house/src/scss/components/_buttons.scss
+++ b/coffee-house/src/scss/components/_buttons.scss
@@ -31,6 +31,10 @@
       transition: all 0.3s;
       max-width: 0;
       height: 2rem;
+
+      @media (hover: none) {
+        max-width: 2rem;
+      }
     }
   }
 
