--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -1,5 +1,6 @@
 .main {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 10rem;
   margin-bottom: 10rem;
 }
@@ -17,12 +18,19 @@
     padding-inline: 6rem;
   }
 
+  @include respond(phone) {
+    padding: 6rem 1.6rem;
+  }
+
   &__info {
     width: 53rem;
-
     display: flex;
     flex-direction: column;
     gap: 4rem;
+
+    @include respond(phone) {
+      width: 100%;
+    }
   }
 
   &__title {
