feat: make favorites section responsive

--- a/coffee-house/src/scss/base/_typography.scss
+++ b/coffee-house/src/scss/base/_typography.scss
@@ -28,6 +28,10 @@ body {
   font-size: 6rem;
   font-weight: 600;
   line-height: 125%;
+
+  @include respond(phone) {
+    font-size: 3.2rem;
+  }
 }
 
 .heading-3 {
