--- a/coffee-house/src/scss/components/_carousel.scss
+++ b/coffee-house/src/scss/components/_carousel.scss
@@ -12,6 +12,10 @@
     &--next {
       right: 0.4rem;
     }
+
+    @include respond(phone) {
+      display: none;
+    }
   }
 
   &__slide {
@@ -47,6 +51,10 @@
   align-items: center;
   gap: 2rem;
   width: 48rem;
+
+  @include respond(phone) {
+    width: 100%;
+  }
 
   &__info {
     display: flex;
