--- a/coffee-house/src/scss/components/_buttons.scss
+++ b/coffee-house/src/scss/components/_buttons.scss
@@ -54,6 +54,7 @@
 
     width: 6rem;
     height: 6rem;
+    aspect-ratio: 1;
 
     background-color: transparent;
     border: 1px solid var(--color-border-dark);
