--- a/coffee-house/src/scss/components/_gallery.scss
+++ b/coffee-house/src/scss/components/_gallery.scss
@@ -4,7 +4,7 @@
 
   grid-template-columns: 1fr 1fr;
 
-  @include respond(tablet) {
+  @include respond(tablet-port) {
     grid-template-columns: 1fr;
   }
 
@@ -17,13 +17,13 @@
     }
     &--2 {
       height: 43rem;
-      @include respond(tablet) {
+      @include respond(tablet-port) {
         display: none;
       }
     }
     &--3 {
       height: 43rem;
-      @include respond(tablet) {
+      @include respond(tablet-port) {
         display: none;
       }
     }
@@ -31,7 +31,7 @@
       margin-top: -16rem; //difference
       height: 59rem;
 
-      @include respond(tablet) {
+      @include respond(tablet-port) {
         margin-top: 0;
       }
     }
@@ -43,11 +43,11 @@
       scale: 1.1;
       transition: all 0.3s;
 
-      @include respond(tablet) {
+      @include respond(tablet-port) {
         scale: 1.05;
       }
 
-      @include respond(phone) {
+      @include respond(phone-sm) {
         scale: 1.25;
       }
     }
