--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -13,12 +13,16 @@
   padding: 10rem;
   max-width: 136rem;
 
-  @include respond(tablet) {
+  @include respond(tablet-port) {
     background-position: 50%;
     padding-inline: 6rem;
   }
 
   @include respond(phone) {
+    padding: 6rem 4rem;
+  }
+
+  @include respond(phone-sm) {
     padding: 6rem 1.6rem;
   }
 
@@ -28,7 +32,7 @@
     flex-direction: column;
     gap: 4rem;
 
-    @include respond(phone) {
+    @include respond(tablet-port) {
       width: 100%;
     }
   }
@@ -58,11 +62,11 @@
   display: flex;
   gap: 10rem;
 
-  @include respond(tablet) {
+  @include respond(tablet-port) {
     flex-direction: column;
   }
 
-  @include respond(phone) {
+  @include respond(phone-sm) {
     gap: 4rem;
   }
 
@@ -87,11 +91,11 @@
   &__img-box {
     flex: 1;
 
-    @include respond(tablet) {
+    @include respond(tablet-port) {
       padding-inline: 3rem;
     }
 
-    @include respond(phone) {
+    @include respond(phone-sm) {
       padding: 0;
     }
   }
