--- a/coffee-house/src/scss/components/_card.scss
+++ b/coffee-house/src/scss/components/_card.scss
@@ -25,9 +25,11 @@
     transition: all 0.3s;
   }
 
-  &:hover {
-    img {
-      scale: 1;
+  @media (hover: hover) {
+    &:hover {
+      img {
+        scale: 1;
+      }
     }
   }
 
