--- a/coffee-house/src/scss/pages/_menu.scss
+++ b/coffee-house/src/scss/pages/_menu.scss
@@ -1,22 +1,48 @@
 .menu {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+
   &__tabs {
     display: flex;
     justify-content: center;
     gap: 1.6rem;
 
-    margin-bottom: 4rem;
+    @include respond(phone) {
+      gap: 0.8rem;
+    }
   }
 
   &__items {
     display: grid;
-    grid-template-columns: 1fr;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, 31rem);
+    grid-auto-rows: 1fr;
     gap: 4rem;
+
+    // TEMP
+    @include respond(tablet-land) {
+      & .card:nth-child(n + 5) {
+        display: none;
+      }
+    }
+  }
+
+  .btn-icon {
+    display: none;
+    align-self: center;
+
+    @include respond(tablet-land) {
+      display: flex;
+    }
   }
 }
 
 .menu-title {
   text-align: center;
   text-wrap: balance;
-  margin-bottom: 4rem;
+
+  @include respond(tablet-port) {
+    text-wrap: wrap;
+  }
 }
