--- a/coffee-house/src/scss/components/_carousel.scss
+++ b/coffee-house/src/scss/components/_carousel.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
 
-  @include respond(phone) {
+  @include respond(phone-lg) {
     justify-content: center;
   }
 
@@ -17,7 +17,7 @@
       right: 0.4rem;
     }
 
-    @include respond(phone) {
+    @include respond(phone-lg) {
       display: none;
     }
   }
@@ -56,7 +56,7 @@
   gap: 2rem;
   width: 48rem;
 
-  @include respond(phone) {
+  @include respond(phone-lg) {
     width: 100%;
   }
 
