refactor: optimize images

--- a/coffee-house/src/scss/pages/_home.scss
+++ b/coffee-house/src/scss/pages/_home.scss
@@ -6,7 +6,7 @@
 }
 
 .hero {
-  background-image: url("/src/imgs/hero.jpeg");
+  background-image: url("/src/imgs/hero.webp");
   background-size: cover;
   background-position: 0%;
   border-radius: 4rem;
