feat: use video for the hero section

--- a/coffee-house/src/scss/main.scss
+++ b/coffee-house/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "base/base";
 @import "base/variables";
 @import "base/typography";
+@import "components/bg-video";
 @import "components/buttons";
 @import "components/carousel";
 @import "components/gallery";
