refactor: use radio buttons for tabs

--- a/coffee-house/src/scss/components/_buttons.scss
+++ b/coffee-house/src/scss/components/_buttons.scss
@@ -155,19 +155,26 @@
   border: 1px solid var(--color-border-light);
   background-color: transparent;
 
-  img {
+  &__icon {
     width: 3rem;
     height: 3rem;
-    padding: 0.5rem;
+    background-color: var(--color-border-light);
+
+    display: grid;
+    place-items: center;
+
     border-radius: 100rem;
 
-    background-color: var(--color-border-light);
+    img {
+      border-radius: 100rem;
+      padding: 0.5rem;
+    }
   }
 
   @media (hover: hover) {
     &:hover,
     &:active,
-    &--active {
+    &:has(input:checked) {
       color: var(--color-text-light);
       border-color: var(--color-border-dark);
       background-color: var(--color-border-dark);
@@ -176,9 +183,14 @@
         background-color: var(--color-bg-body);
       }
     }
+
+    &:hover &__icon {
+      background-color: var(--color-bg-body);
+      color: var(--color-text-dark);
+    }
   }
 
-  &--active {
+  &:has(input:checked) {
     color: var(--color-text-light);
     border-color: var(--color-border-dark);
     background-color: var(--color-border-dark);
@@ -186,6 +198,10 @@
     img {
       background-color: var(--color-bg-body);
     }
-    pointer-events: none;
+  }
+
+  &:has(input:checked) &__icon {
+    color: var(--color-text-dark);
+    background-color: var(--color-bg-body);
   }
 }
