feat: create order form layout

--- a/coffee-house/src/scss/main.scss
+++ b/coffee-house/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "components/gallery";
 @import "components/card";
 @import "components/modal";
+@import "components/order";
 @import "layout/header";
 @import "layout/navigation";
 @import "layout/footer";
