--- a/coffee-house/src/scss/components/_buttons.scss
+++ b/coffee-house/src/scss/components/_buttons.scss
@@ -47,6 +47,22 @@
   }
 }
 
+.btn-secondary {
+  @extend %btn;
+
+  background-color: transparent;
+  border: 1px solid var(--color-border-dark);
+  padding-block: 1rem;
+
+  @media (hover: hover) {
+    &:hover,
+    &:active {
+      color: var(--color-text-light);
+      background-color: var(--color-bg-container);
+    }
+  }
+}
+
 .btn-icon {
   &,
   &:link,
