--- a/coffee-house/src/scss/components/_modal.scss
+++ b/coffee-house/src/scss/components/_modal.scss
@@ -1,13 +1,38 @@
-.dialog {
+.modal {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 1.6rem;
+
+  background-color: var(--color-bg-body);
+  border: none;
+  border-radius: 4rem;
+
+  // TEMP
+  width: 80rem;
 
   &::backdrop {
     background: rgba(65, 64, 62, 0.8);
   }
+
+  &__content {
+    grid-column: 1/-1;
+  }
+
+  &__form {
+    display: grid;
+    grid-template-columns: calc(34rem - 3.2rem) 1fr;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  &__close {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    width: 100%;
+  }
 }
 
-body:has(.dialog[open]) {
+body:has(.modal[open]) {
   overflow: hidden;
 }
