--- a/coffee-house/src/scss/components/_carousel.scss
+++ b/coffee-house/src/scss/components/_carousel.scss
@@ -82,6 +82,7 @@
   align-items: center;
   gap: 2rem;
   width: 48rem;
+  user-select: none;
 
   @include respond(phone-lg) {
     width: 100%;
@@ -92,5 +93,9 @@
     flex-direction: column;
     text-align: center;
     gap: 1.6rem;
+  }
+
+  img {
+    pointer-events: none;
   }
 }
